--- a/src/pages/about/hobbies-accordian/HobbiesAccordian.module.scss
+++ b/src/pages/about/hobbies-accordian/HobbiesAccordian.module.scss
@@ -93,8 +93,8 @@
   .hobbiesAccordianContainer {
     width: 90%;
     top: 1rem;
-    right: 1rem;
-    left: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 50;
 
     .HobbiesAccordianItem {      
