--- a/src/pages/contact/Contact.module.scss
+++ b/src/pages/contact/Contact.module.scss
@@ -66,9 +66,10 @@
   .contactContainer {  
     .linksContainer {
       top: unset;
-      right: unset;
+      left: 50%;
+      transform: translateX(-50%);
       bottom: 8rem;
-      width: 100%;
+      width: 10rem;
       justify-content: center;
     }
   }
